# valuation-scenario-lab

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml
demo/: artifact-catalog.html  artifact-catalog.json  artifact-catalog.md  assumption-change-walkthrough.html  assumption-change-walkthrough.json  assumption-change-walkthrough.md  casebook.html  casebook.json  casebook.md  compare-history.json  compare-history.md  decision-journal.json  decision-journal.md  fixture-doctor.json  fixture-doctor.md  fixture-linter-report.html  fixture-linter-report.json  fixture-linter-report.md  multi-company-demo-gallery.html  multi-company-demo-gallery.json  multi-company-demo-gallery.md  public-readiness-landing.html  public-readiness-landing.json  public-readiness-landing.md  quickstart-check.json  quickstart-check.md  readme-snippet.html  readme-snippet.json  readme-snippet.md  release-deck.html  release-deck.json  release-deck.md  reproducibility-audit.html  reproducibility-audit.json  reproducibility-audit.md  review-ledger.json  review-ledger.md  reviewer-scorecard.html  reviewer-scorecard.json  reviewer-scorecard.md  (+23 more)
demo/onboarding-template/: README.md  company.json  prior-packet.json  review-policy.json
docs/: packet-format.md  release-checks.md
examples/: company.json  prior-packet.json  review-policy.json  software-compounder.json
release/: data-dictionary.html  data-dictionary.json  data-dictionary.md  install-smoke-receipt.html  install-smoke-receipt.json  install-smoke-receipt.md  operator-handoff.html  operator-handoff.json  operator-handoff.md  public-bundle.html  public-bundle.json  public-bundle.md  release-manifest.json  release-manifest.md
skills/agent/valuation-scenario-lab/: SKILL.md
src/valuation_scenario_lab/: __init__.py  cli.py  doctor.py  engine.py  io.py  model.py  release.py  render.py
tests/: test_cli.py
tests/golden/: key-demo-snapshots.json
