[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-scenario-lab"
version = "0.5.0"
description = "Zero-dependency offline valuation scenario packet generator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "valuation-scenario-lab contributors"}]
keywords = ["valuation", "finance", "research", "dcf", "scenario-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.scripts]
valuation-scenario-lab = "valuation_scenario_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/valuation-scenario-lab" = [
  "README.md",
  "pyproject.toml",
  "LICENSE",
  "CHANGELOG.md",
  "RELEASE_NOTES.md",
]
"share/valuation-scenario-lab/examples" = [
  "examples/company.json",
  "examples/software-compounder.json",
  "examples/prior-packet.json",
  "examples/review-policy.json",
]
"share/valuation-scenario-lab/demo" = [
  "demo/valuation-packet.json",
  "demo/valuation-packet.md",
  "demo/valuation-packet.html",
  "demo/compare-history.json",
  "demo/compare-history.md",
  "demo/review-ledger.json",
  "demo/review-ledger.md",
  "demo/sensitivity-matrix.json",
  "demo/sensitivity-matrix.md",
  "demo/assumption-change-walkthrough.json",
  "demo/assumption-change-walkthrough.md",
  "demo/assumption-change-walkthrough.html",
  "demo/multi-company-demo-gallery.json",
  "demo/multi-company-demo-gallery.md",
  "demo/multi-company-demo-gallery.html",
  "demo/decision-journal.json",
  "demo/decision-journal.md",
  "demo/quickstart-check.json",
  "demo/quickstart-check.md",
  "demo/visual-receipt.json",
  "demo/visual-receipt.md",
  "demo/visual-receipt.html",
  "demo/public-readiness-landing.json",
  "demo/public-readiness-landing.md",
  "demo/public-readiness-landing.html",
  "demo/fixture-doctor.json",
  "demo/fixture-doctor.md",
]
"share/valuation-scenario-lab/docs" = [
  "docs/packet-format.md",
  "docs/release-checks.md",
]
"share/valuation-scenario-lab/release" = [
  "release/release-manifest.json",
  "release/release-manifest.md",
]
"share/valuation-scenario-lab/skills/agent/valuation-scenario-lab" = [
  "skills/agent/valuation-scenario-lab/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
